# taco

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  corebuild.yml  cozip-ci.yml  pages.yml  pywheels.yml  release.yml  version-sync-check.yml
cozip/: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md  SPEC.md  VERSION  index.html
cozip/core/: CMakeLists.txt  cozip.c  cozip.h  out.cozip  test_c.py  version.h.in
cozip/core/libzip/: config.h
cozip/docs/: c.html  julia.html  python.html  r.html
cozip/include/: coz.h
cozip/javascript/: README.md  wasm_bridge.c
cozip/javascript/src/: cozip-wasm-wrapper.js
cozip/julia/: Artifacts.toml  Manifest.toml  Project.toml  README.md  make-artifacts-toml.jl
cozip/julia/src/: Cozip.jl  LibCozip.jl  Writer.jl
cozip/julia/test/: runtests.jl
cozip/python/: hatch_build.py  pyproject.toml
cozip/python/cozip/: __init__.py  _core.py  _reader.py  _writer.py
cozip/python/cozip/_lib/: libcozip.dylib
cozip/python/tests/: __init__.py  test_smoke.py
cozip/r/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.note  NAMESPACE  configure
cozip/r/R/: cozip-package.R  cozip.R  zzz.R
cozip/r/man/: cozip-package.Rd  create.Rd  stage_create.Rd  stage_metadata.Rd
cozip/r/src/: .gitignore  Makevars  Makevars.win  cozip.c  cozip.h  cozip_glue.c  version.h
cozip/r/src/libzip/: CMakeLists.txt  config.h  zip_random_win32.c
cozip/r/src/zlib/: CMakeLists.txt  zconf.h
cozip/r/tests/: testthat.R
cozip/r/tests/testthat/: helper-cozip.R  test-smoke.R
cozip/r/tools/: gen-version.sh  sync_version.sh
cozip/src/: coz.c
deck/overview/: README.md  index.html
deck/overview/css/: animations.css  content.css  hero.css  labels.css  variables.css
deck/overview/js/: main.js  nav.js
deck/overview/sections/: get-started.html  how-it-works.html  layout.html  problem.html  solution.html  xkcd.html
deck/playground/: README.md  app.js  index.html  styles.css
deck/technical/: README.md
onepager/: README.md  index.html  style.css
spec/: LICENSE  README.md  index.html
