[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cozip"
version = "2026.4.28"
description = "Cloud-Optimized ZIP — Python bindings"
requires-python = ">=3.10"
dependencies = ["cffi>=1.16", "pyarrow>=14"]

[tool.hatch.build.targets.wheel]
packages = ["cozip"]
# Include the prebuilt native lib in the wheel.
artifacts = ["cozip/_lib/*.dylib", "cozip/_lib/*.so", "cozip/_lib/*.dll"]

# Mark the wheel as platform-specific (because of the bundled .dylib),
# but ABI-agnostic (cffi ABI mode works on any Python 3.x).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]